Fix syntax errors and improve structure in demoCSSStyle.html

--- a/JavaScript DOM/demoCSSStyle.html
+++ b/JavaScript DOM/demoCSSStyle.html
@@ -1,20 +1,16 @@
 <style>
-    div {
-        background-color: red;
-        width: 100px;
-        height: 100px;
-        transition: 2s;
-    }
-    .widthmax {
-        width: 900px;
-    }
-</style>
-<div id="box"></div>
-<button onclick="change()">Change Color</button>
-<script>
+    divo
+    background-color:
+    width: 100px;
+    height: leepx;
+    transition: 2s
+    . widthmax{
+    width: 900px;
+    </style>
+    <div
+    <button ">change color</button>
+    <script>
     // select box
-    var box = document.getElementById("box");
-    function change() {
-        box.setAttribute("class", "widthmax");
-    }
-</script>
+    var
+    function change()
+    box. setAttribute( " class" )
