Updated script.js and index.html, removed README.md

--- a/LengthConverter/index.html
+++ b/LengthConverter/index.html
@@ -22,8 +22,8 @@
     </div>
     <script>
       function convert(){
-        const cmVal = Number(document.getElementById("input").value)
-        const inchVal = cmVal/2.54
+        const cmVal = Number(document.getElementById("input").value) // get the value from input field
+        const inchVal = cmVal/2.54 
         const result = document.getElementById("result")
         result.innerHTML = inchVal.toFixed(3) + " inches"
       }
